--- a/index.html
+++ b/index.html
@@ -4,32 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Bakir seriaa is a Developer and YouTuber and is a B.Tech student at Guelma College Of Computer Science">  
-	<meta name="author" content="Mr.Bakir seriaa">
-    <meta name="keywords" content="Bakir, seriaa, Bakir seriaa, mumbai, developer, web developer, Full-Stack developer , Front-end developer"/>
-    <meta name="subject" content="Bakir seriaa Portfolio">
-    <meta name="copyright"content="Bakir seriaa">
-    <meta name="language" content="EN">
-    <meta name="robots" content="index, follow" />
-    <meta name="revised" content="Thursday, December 12th, 2019, 1:04 am" />
-    <meta name="abstract" content="Bakir seriaa">
-    <meta name="topic" content="Bakir seriaa portfolio">
-    <meta name="summary" content="This is Bakir seriaa's Portfolio Website who is a Developer and a YouTuber.">
-    <meta name="Classification" content="Business">
-    <meta name="author" content="Bakir seriaa, bakirproductions01@gmail.com">
-    <meta name="designer" content="Bakir seriaa">
-    <meta name="copyright" content="Bakir seriaa">
-    <meta name="reply-to" content="bakirproductions01@gmail.com">
-    <meta name="owner" content="Bakir seriaa">
-    <meta name="url" content="https://Bakirseriaa.github.io/Portfolio/">
-    <meta name="identifier-URL" content="https://Bakirseriaa.github.io/Portfolio/">
-    <meta name="directory" content="submission">
-    <meta name="category" content="Business | Portfolio">
-    <meta name="coverage" content="Worldwide">
-    <meta name="distribution" content="Global">
-    <meta name="rating" content="General">
-    <meta name="revisit-after" content="7 days">
-    <meta http-equiv="Expires" content="0">
     <title>Bakir Seriaa| Portfolio Website | Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -46,12 +20,13 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">Bakir<span>Prod.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#portfolio" class="menu-btn">Portfolio</a></li>
                 <li><a href="#teams" class="menu-btn">Teams</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -68,7 +43,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Bakir Seriaa</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="https://www.fiverr.com/bakir_prod?public_mode=true">Hire me</a>
             </div>
         </div>
     </section>
@@ -79,7 +54,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile-1.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Bakir and I'm a <span class="typing-2"></span></div>
@@ -99,20 +74,20 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>I will design you a responsive web site using Html Css Java Script.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
+                        <div class="text">logo Animation</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
+                        <div class="text">Video Editing</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
@@ -128,7 +103,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam Bakiras quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java, java Script , MySql , Html & Css, and C.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -142,23 +117,23 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
-                            <span>50%</span>
+                            <span>Java</span>
+                            <span>80%</span>
                         </div>
-                        <div class="line php"></div>
+                        <div class="line java"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -172,6 +147,53 @@
         </div>
     </section>
 
+
+    <!-- portfolio section start -->
+    <section class="portfolio" id="portfolio">
+        <div class="max-width">
+            <h2 class="title">My Works</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                       <a href="https://github.com/Bakirprod" target="_blank"> <img src="images/portfolio/studentsite.png" alt="studentsite"></a>
+                        <div class="text">Servlet,JSP CRUD</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <a href="https://github.com/Bakirprod" target="_blank"> <img src="images/portfolio/fbhomesite.png" alt="fbhomesite"></a>
+                        <div class="text">Mini Facebook By Java</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/portfoliosite.png" alt="portfoliosite"></a>
+                        <div class="text">My Portfolio Website</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/moviesite.png" alt="moviesite"></a>
+                        <div class="text">Movies Website</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/cvsite.png" alt="cvsite"></a>
+                        <div class="text">CV Website</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
@@ -179,37 +201,9 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/profile-1.jpg" alt="">
+                        <div class="text">Bakir Seriaa</div>
+                        <p>Just Me.</p>
                     </div>
                 </div>
             </div>
@@ -223,27 +217,27 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>I'd Love To Hear From You!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="sub-title">Bakir Seriaa</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">Hai El-Hofra, Ghardaia</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">bakirproductions01@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -253,17 +247,17 @@
                     <form action="https://formspree.io/f/xjvlynav"  method="POST">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" placeholder="Name"  name="name"  required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" placeholder="Email" name="email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" placeholder="Subject" name="subject"  required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.." name="massage"  required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
@@ -276,7 +270,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="#">Bakir Seriaa</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
