--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Bakir Seriaa</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://www.fiverr.com/bakir_prod?public_mode=true">Hire me</a>
+                <a href="https://www.fiverr.com/bakir_prod?public_mode=true" target="_blank">Hire me</a>
             </div>
         </div>
     </section>
@@ -59,7 +59,7 @@
                 <div class="column right">
                     <div class="text">I'm Bakir and I'm a <span class="typing-2"></span></div>
                     <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java, java Script , MySql , Html & Css, and C.</p>
-                    <a href="#">Download CV</a>
+                    <a href="bakirser_cv.pdf">Download CV</a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fa fa-bar-chart" style="font-size:48px;color:red"></i>
                         <div class="text">Video Editing</div>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
@@ -157,35 +157,35 @@
                     <div class="box">
                        <a href="https://github.com/Bakirprod" target="_blank"> <img src="images/portfolio/studentsite.png" alt="studentsite"></a>
                         <div class="text">Servlet,JSP CRUD</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Servlet,JSP CRUD.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <a href="https://github.com/Bakirprod" target="_blank"> <img src="images/portfolio/fbhomesite.png" alt="fbhomesite"></a>
                         <div class="text">Mini Facebook By Java</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Mini Facebook By Java.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/portfoliosite.png" alt="portfoliosite"></a>
                         <div class="text">My Portfolio Website</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>My Portfolio Website.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/moviesite.png" alt="moviesite"></a>
                         <div class="text">Movies Website</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Movies Website.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/cvsite.png" alt="cvsite"></a>
                         <div class="text">CV Website</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>CV Website.</p>
                     </div>
                 </div>
             </div>
