--- a/index.html
+++ b/index.html
@@ -3,7 +3,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="bakir seriaa is a Developer and YouTuber and is a Computer Science student at 8 mai 1945 University in Guelma">  
+	<meta name="author" content="bakir seriaa">
+    <meta name="keywords" content="bakir, seriaa, bakir seriaa, ghardaia, developer, web developer, android developer , full-stack developer , backend developer"/>
+    <meta name="subject" content="bakir seriaa Portfolio">
+    <meta name="copyright"content="bakir seriaa">
+    <meta name="language" content="EN">
+    <meta name="robots" content="index, follow" />
+    <meta name="revised" content="Thursday, january 27th, 2022, 4:54 pm" />
+    <meta name="abstract" content="bakir seriaa">
+    <meta name="topic" content="bakir seriaa portfolio">
+    <meta name="summary" content="This is bakir seriaa's Portfolio Website who is a Developer and a YouTuber.">
+    <meta name="Classification" content="Business">
+    <meta name="author" content="bakir seriaa, bakirseriaa@gmail.com">
+    <meta name="designer" content="bakir seriaa">
+    <meta name="copyright" content="bakir seriaa">
+    <meta name="reply-to" content="bakirseriaa@gmail.com">
+    <meta name="owner" content="bakir seriaa">
+    <meta name="url" content="https://bakirprod.github.io/bakirser/">
+    <meta name="identifier-URL" content="https://bakirprod.github.io/bakirser/">
+    <meta name="directory" content="submission">
+    <meta name="category" content="Business | Portfolio">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="7 days">
+    <meta http-equiv="Expires" content="0">
+
+   <!-- mobile specific metas
+   ================================================== -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Bakir Seriaa| Portfolio Website | Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
