--- a/index.html
+++ b/index.html
@@ -3,36 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<meta name="description" content="bakir seriaa is a Developer and YouTuber and is a Computer Science student at 8 mai 1945 University in Guelma">  
-	<meta name="author" content="bakir seriaa">
-    <meta name="keywords" content="bakir, seriaa, bakir seriaa, ghardaia, developer, web developer, android developer , full-stack developer , backend developer"/>
-    <meta name="subject" content="bakir seriaa Portfolio">
-    <meta name="copyright"content="bakir seriaa">
-    <meta name="language" content="EN">
-    <meta name="robots" content="index, follow" />
-    <meta name="revised" content="Thursday, january 27th, 2022, 4:54 pm" />
-    <meta name="abstract" content="bakir seriaa">
-    <meta name="topic" content="bakir seriaa portfolio">
-    <meta name="summary" content="This is bakir seriaa's Portfolio Website who is a Developer and a YouTuber.">
-    <meta name="Classification" content="Business">
-    <meta name="author" content="bakir seriaa, bakirseriaa@gmail.com">
-    <meta name="designer" content="bakir seriaa">
-    <meta name="copyright" content="bakir seriaa">
-    <meta name="reply-to" content="bakirseriaa@gmail.com">
-    <meta name="owner" content="bakir seriaa">
-    <meta name="url" content="https://bakirprod.github.io/bakirser/">
-    <meta name="identifier-URL" content="https://bakirprod.github.io/bakirser/">
-    <meta name="directory" content="submission">
-    <meta name="category" content="Business | Portfolio">
-    <meta name="coverage" content="Worldwide">
-    <meta name="distribution" content="Global">
-    <meta name="rating" content="General">
-    <meta name="revisit-after" content="7 days">
-    <meta http-equiv="Expires" content="0">
-
-   <!-- mobile specific metas
-   ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakir Seriaa| Portfolio Website | Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -41,6 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    
+    <link rel="shortcut icon" href="images/portfolio.png" type="image/x-icon">
 
 </head>
 <body>
@@ -101,23 +74,23 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
+                        <a href="https://www.fiverr.com/share/zoloPg"><i class="fas fa-laptop-code"></i></a>
                         <div class="text">Web Design</div>
                         <p>I will design you a responsive web site using Html Css Java Script.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
+                        <a href="https://www.fiverr.com/share/gdgdjY"><i class="fas fa-play-circle"></i></a>
                         <div class="text">logo Animation</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>I will create custom logo animation for your business and youtube.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fa fa-bar-chart" style="font-size:48px;color:red"></i>
+                        <a href="https://www.fiverr.com/share/gdgdjY"><i class="fas fa-video"></i></a>
                         <div class="text">Video Editing</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>I will do a professional video editing within 24 hours.</p>
                     </div>
                 </div>
                </div>
@@ -184,35 +157,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                       <a href="https://github.com/Bakirprod" target="_blank"> <img src="images/portfolio/studentsite.png" alt="studentsite"></a>
+                       <a href="https://github.com/Bakirprod/Servlet-JSP-CRUD" target="_blank"> <img src="images/portfolio/studentsite.png" alt="studentsite"></a>
                         <div class="text">Servlet,JSP CRUD</div>
                         <p>Servlet,JSP CRUD.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://github.com/Bakirprod" target="_blank"> <img src="images/portfolio/fbhomesite.png" alt="fbhomesite"></a>
+                        <a href="https://github.com/Bakirprod/Mini-Facebook-By-Java" target="_blank"> <img src="images/portfolio/fbhomesite.png" alt="fbhomesite"></a>
                         <div class="text">Mini Facebook By Java</div>
                         <p>Mini Facebook By Java.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/portfoliosite.png" alt="portfoliosite"></a>
+                        <a href="https://github.com/Bakirprod/bakirser" target="_blank">  <img src="images/portfolio/portfoliosite.png" alt="portfoliosite"></a>
                         <div class="text">My Portfolio Website</div>
                         <p>My Portfolio Website.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/moviesite.png" alt="moviesite"></a>
+                        <a href="https://github.com/Bakirprod/Movie-Website" target="_blank">  <img src="images/portfolio/moviesite.png" alt="moviesite"></a>
                         <div class="text">Movies Website</div>
                         <p>Movies Website.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://github.com/Bakirprod" target="_blank">  <img src="images/portfolio/cvsite.png" alt="cvsite"></a>
+                        <a href="https://github.com/Bakirprod/CV-Website" target="_blank">  <img src="images/portfolio/cvsite.png" alt="cvsite"></a>
                         <div class="text">CV Website</div>
                         <p>CV Website.</p>
                     </div>
