--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@
                 <div class="card">
                     <div class="box">
                        <a href="https://github.com/Bakirprod/Servlet-JSP-CRUD" target="_blank"> <img src="images/portfolio/studentsite.png" alt="studentsite"></a>
-                        <div class="text">Servlet,JSP CRUD</div>
-                        <p>Servlet,JSP CRUD.</p>
+                        <div class="text">Students Management By JAVA</div>
+                        <p>Students Management By JAVA : Servlet,JSP CRUD.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <a href="https://github.com/Bakirprod/Mini-Facebook-By-Java" target="_blank"> <img src="images/portfolio/fbhomesite.png" alt="fbhomesite"></a>
                         <div class="text">Mini Facebook By Java</div>
-                        <p>Mini Facebook By Java.</p>
+                        <p>Mini Facebook Or Faceboock Clone By Java : Servlet and JSP.</p>
                     </div>
                 </div>
                 <div class="card">
