--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
                     </div>
                     <div class="bars">
                         <div class="info">
+                            <span>PHP</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line PHP"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>MySQL</span>
                             <span>70%</span>
                         </div>
