--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java, java Script , MySql , Html & Css, and C.</p>
+                    <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java , PHP & LARAVEL , java Script , MySql , Html & Css, Bootstrap , Wordpress , and C.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
