--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Bakir and I'm a <span class="typing-2"></span></div>
-                    <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java, java Script , MySql , Html & Css, and C.</p>
+                    <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java, PHP & LARAVEL , java Script , MySql , Html & Css, Bootstrap , Wordpress , and C.</p>
                     <a href="bakirser_cv.pdf">Download CV</a>
                 </div>
             </div>
