--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://www.fiverr.com/share/gdgdjY"><i class="fas fa-play-circle"></i></a>
-                        <div class="text">logo Animation</div>
-                        <p>I will create custom logo animation for your business and youtube.</p>
+                        <a href="https://www.fiverr.com/share/gdgdjY"><i class="fa-solid fa-code"></i></a>
+                        <div class="text">Web Development</div>
+                        <p>I will Develop your Website Personal Or E-Commerce Using LARAVEL Or Wordpress AS YOU LIKE !.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://www.fiverr.com/share/gdgdjY"><i class="fas fa-video"></i></a>
+                        <a href="https://www.fiverr.com/share/gdgdjY"><i class="fas fa-play-circle"></i></a>
                         <div class="text">Video Editing</div>
                         <p>I will do a professional video editing within 24 hours.</p>
                     </div>
