--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://www.fiverr.com/share/zoloPg"><i class="fa-solid fa-code"></i></a>
+                        <a href="https://www.fiverr.com/share/zoloPg"><i class="fas fa-laptop-code"></i></a>
                         <div class="text">Web Development</div>
                         <p>I will Develop your Website Personal Or E-Commerce Using LARAVEL Or Wordpress AS YOU LIKE !.</p>
                     </div>
