--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Bakir Seriaa</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://www.fiverr.com/bakir_prod?public_mode=true" target="_blank">Hire me</a>
+                <a href="https://www.fiverr.com/share/Aoaqqq" target="_blank">Hire me</a>
             </div>
         </div>
     </section>
@@ -61,7 +61,7 @@
                 <div class="column right">
                     <div class="text">I'm Bakir and I'm a <span class="typing-2"></span></div>
                     <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java, PHP & LARAVEL , java Script , MySql , Html & Css, Bootstrap , Wordpress , and C.</p>
-                    <a href="bakirser_cv.pdf">Download CV</a>
+                    <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
@@ -74,21 +74,21 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <a href="https://www.fiverr.com/share/zoloPg"><i class="fas fa-laptop-code"></i></a>
+                        <a href="https://www.fiverr.com/share/Aoaqqq"><i class="fas fa-laptop-code"></i></a>
                         <div class="text">Web Design</div>
                         <p>I will design you a responsive web site using Html Css Java Script.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://www.fiverr.com/share/zoloPg"><i class="fas fa-code"></i></a>
+                        <a href="https://www.fiverr.com/share/Aoaqqq"><i class="fas fa-code"></i></a>
                         <div class="text">Web Development</div>
                         <p>I will Develop your Website Personal Or E-Commerce Using LARAVEL Or Wordpress AS YOU LIKE !.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://www.fiverr.com/share/gdgdjY"><i class="fas fa-play-circle"></i></a>
+                        <a href="https://www.fiverr.com/share/Aoaqqq"><i class="fas fa-play-circle"></i></a>
                         <div class="text">Video Editing</div>
                         <p>I will do a professional video editing within 24 hours.</p>
                     </div>
