--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Bakir Seriaa</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://www.fiverr.com/share/Aoaqqq" target="_blank">Hire me</a>
+                <a href="https://www.fiverr.com/bakirdev" target="_blank">Hire me</a>
             </div>
         </div>
     </section>
