--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="column right">
                     <div class="text">I'm Bakir and I'm a <span class="typing-2"></span></div>
                     <p>A Computer Science and Engineering (CSE) B.Tech. student from Guelma College Of Computer Science with excellent academic background and diverse skillset. Experienced in Web, Full-Stack Development. I am well versed with Java, PHP & LARAVEL , java Script , MySql , Html & Css, Bootstrap , Wordpress , and C.</p>
-                    <a href="#">Download CV</a>
+                    <a href="indexx.html">Download CV</a>
                 </div>
             </div>
         </div>
